feat: play youtube tracks using cobalt api